[options]
tests_require =
    pytest
    pytest-cov
    testypie
    httpretty

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest

[pycodestyle]
select =
ignore = E501,W503
max_line_length = 79
exclude = venv,.tox,.eggs,*.egg,build,cosmic/cosmic.py

[tool:pytest]
# If a pytest section is found in one of the possible config files
# (pytest.ini, tox.ini or setup.cfg), then pytest will not look for any others,
# so if you add a pytest config section elsewhere,
# you will need to delete this section from setup.cfg.
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

[tool:isort]
force_single_line = True
line_length = 79
known_first_party = httpapi
default_section = THIRDPARTY
forced_separate = test_httpapi
not_skip = __init__.py
skip = migrations
